# SimpleFad

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  SimpleFad.hpp  SimpleFad_BinaryExpr.hpp  SimpleFad_BinaryOps.hpp  SimpleFad_ComparisonOps.hpp  SimpleFad_DerivStorageTraits.hpp  SimpleFad_Exception.hpp  SimpleFad_ExprBase.hpp  SimpleFad_ExprTraits.hpp  SimpleFad_FadLiteral.hpp  SimpleFad_FadVariable.hpp  SimpleFad_UnaryExpr.hpp  SimpleFad_UnaryOps.hpp  SimpleFad_config.hpp.in
test/: BinaryExprTests.cpp  CMakeLists.txt  ComparisonOpsTests.cpp  EvaluationTests.cpp  FadLiteralTests.cpp  FadVariableTests.cpp  NewtonsMethodTests.cpp  SimpleFad_TestingUtil.hpp  UnaryExprTests.cpp
